v2m/core/formats/tests/snapshots/roundtrip__nir_roundtrip__minimal.snap
---
source: core/formats/tests/roundtrip.rs
expression: value
---
{
  "design": "example",
  "modules": {
    "Example": {
      "nets": {
        "a": {
          "bits": 1
        },
        "b": {
          "bits": 1
        },
        "n0": {
          "bits": 1
        },
        "y": {
          "bits": 1
        }
      },
      "nodes": {
        "and0": {
          "op": "AND",
          "pin_map": {
            "A": {
              "lsb": 0,
              "msb": 0,
              "net": "a"
            },
            "B": {
              "lsb": 0,
              "msb": 0,
              "net": "b"
            },
            "Y": {
              "lsb": 0,
              "msb": 0,
              "net": "y"
            }
          },
          "uid": "and0",
          "width": 1
        },
        "const0": {
          "op": "CONST",
          "pin_map": {
            "Y": {
              "const": "1",
              "width": 1
            }
          },
          "uid": "const0",
          "width": 1
        },
        "mux0": {
          "op": "MUX",
          "pin_map": {
            "A": {
              "lsb": 0,
              "msb": 0,
              "net": "a"
            },
            "B": {
              "lsb": 0,
              "msb": 0,
              "net": "b"
            },
            "S": {
              "concat": [
                {
                  "lsb": 0,
                  "msb": 0,
                  "net": "n0"
                }
              ]
            },
            "Y": {
              "lsb": 0,
              "msb": 0,
              "net": "y"
            }
          },
          "uid": "mux0",
          "width": 1
        }
      },
      "ports": {
        "a": {
          "bits": 1,
          "dir": "input"
        },
        "b": {
          "bits": 1,
          "dir": "input"
        },
        "y": {
          "bits": 1,
          "dir": "output"
        }
      }
    }
  },
  "top": "Example",
  "v": "nir-1.1"
}
